--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,38 +1,11 @@
-/* This file is for your main application CSS */
-@import "./phoenix.css";
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
-/* Alerts and form errors used by phx.new */
-.alert {
-  padding: 15px;
-  margin-bottom: 20px;
-  border: 1px solid transparent;
-  border-radius: 4px;
-}
-.alert-info {
-  color: #31708f;
-  background-color: #d9edf7;
-  border-color: #bce8f1;
-}
-.alert-warning {
-  color: #8a6d3b;
-  background-color: #fcf8e3;
-  border-color: #faebcc;
-}
-.alert-danger {
-  color: #a94442;
-  background-color: #f2dede;
-  border-color: #ebccd1;
-}
-.alert p {
-  margin-bottom: 0;
-}
-.alert:empty {
-  display: none;
-}
+/* This file is for your main application CSS */
+
 .invalid-feedback {
-  color: #a94442;
-  display: block;
-  margin: -1rem 0 2rem;
+  @apply text-red-400/100;
 }
 
 /* LiveView specific classes for your customization */
@@ -59,11 +32,14 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0,0,0,0.4);
 }
 
 .phx-modal-content {
-  background-color: #fefefe;
+  @apply bg-gray-200;
+  @apply dark:bg-gray-900;
+  @apply border;
+  @apply rounded;
+  @apply rounded-md;
   margin: 15vh auto;
   padding: 20px;
   border: 1px solid #888;
@@ -118,3 +94,4 @@
   0% { opacity: 1; }
   100% { opacity: 0; }
 }
+
