--- a/lib/communote_web/live/course_live/index.html.heex
+++ b/lib/communote_web/live/course_live/index.html.heex
@@ -1,25 +1,19 @@
-<h1>Listing Courses</h1>
+<h1 class="text-center text-4xl font-bold underline underline-offset-8 decoration-4 decoration-purple-800 dark:decoration-green-600">Search for courses</h1>
 
 <.form let={f} for={@changeset} phx-change="changed" phx_submit="changed">
-  <%= label f, :term %>
-  <%= text_input f, :term, phx_debounce: "600" %>
-
-  <%= submit "Search" %>
+  <div class="relative mt-6 lg:w-7/12 lg:mx-auto">
+    <span class="absolute inset-y-0 left-0 flex items-center pl-3">
+      <svg class="w-5 h-5 text-gray-400" viewBox="0 0 24 24" fill="none">
+        <path d="M21 21L15 15M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+      </svg>
+    </span>
+    
+    <%= text_input f, :term, phx_debounce: "600", class: "w-full py-2 pl-10 pr-4 text-gray-700 bg-white border rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-400 dark:focus:border-blue-300 focus:ring-blue-300 focus:ring-opacity-40 focus:outline-none focus:ring" %>
+  </div>
 </.form>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Code</th>
-    </tr>
-  </thead>
-  <tbody id="courses">
-    <%= for course <- @courses do %>
-        <tr id={"course-#{course.id}"}>
-          <td><%= live_redirect course.title, to: Routes.note_index_path(@socket, :index, course.code) %></td>
-          <td><%= course.code %></td>
-        </tr>
-    <% end %>
-  </tbody>
-</table>
+<ul class="list-none grid grid-cols-1 gap-2 md:grid-cols-3 md:gap-4 lg:grid-cols-4 lg:gap-6 py-10">
+  <%= for course <- @courses do %>
+    <%= live_component CommunoteWeb.Live.CourseLive.CourseCard, course: course %>
+  <% end %>
+</ul>
