--- a/lib/communote_web/live/note_live/index.html.heex
+++ b/lib/communote_web/live/note_live/index.html.heex
@@ -1,44 +1,10 @@
-<h1>Listing Notes</h1>
+<h1 class="text-center text-4xl font-bold underline underline-offset-8 decoration-4 decoration-purple-800 dark:decoration-green-600">Notes</h1>
 
-<%= if @live_action in [:new, :edit] do %>
-  <.modal return_to={Routes.note_index_path(@socket, :index, @code)}>
-    <.live_component
-      module={CommunoteWeb.NoteLive.FormComponent}
-      id={@note.id || :new}
-      title={@page_title}
-      action={@live_action}
-      note={@note}
-      current_user={assigns.current_user}
-      return_to={Routes.note_index_path(@socket, :index, @code)}
-    />
-  </.modal>
-<% end %>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Small description</th>
-      <th>Slug</th>
-
-      <th></th>
-    </tr>
-  </thead>
-  <tbody id="notes">
-    <%= for note <- @notes do %>
-      <tr id={"note-#{note.id}"}>
-        <td><%= note.title %></td>
-        <td><%= note.description %></td>
-        <td><%= note.small_description %></td>
-        <td><%= note.slug %></td>
-
-        <td>
-          <span><%= live_redirect "Show", to: Routes.note_show_path(@socket, :show, @code, note.slug) %></span>
-          <span><%= live_patch "Edit", to: Routes.note_index_path(@socket, :edit, @code, note.slug) %></span>
-          <span><%= link "Delete", to: "#", phx_click: "delete", phx_value_slug: note.slug, data: [confirm: "Are you sure?"] %></span>
-        </td>
-      </tr>
+<ul class="list-none grid grid-cols-1 gap-2 md:grid-cols-3 md:gap-4 lg:grid-cols-4 lg:gap-6 py-10">
+  <%= for year <- Enum.chunk_by(@notes, fn note -> note.year.year end) do %>
+    <h2 class="text-2xl font-bold col-span-full underline underline-offset-8 decoration-4 decoration-purple-800 dark:decoration-green-600"><%= List.first(year).year.year %></h2>
+    <%= for note <- year do %>
+      <%= live_component CommunoteWeb.Live.CourseLive.NoteCard, note: note %>
     <% end %>
-  </tbody>
-</table>
+  <% end %>
+</ul>
