--- a/lib/communote_web/live/note_live/show.html.heex
+++ b/lib/communote_web/live/note_live/show.html.heex
@@ -1,7 +1,5 @@
-<h1>Show Note</h1>
-
 <%= if @live_action in [:edit] do %>
-  <.modal return_to={Routes.note_show_path(@socket, :show, @code, @note.slug)}>
+  <.modal return_to={Routes.note_show_path(@socket, :show, @note.slug)}>
     <.live_component
       module={CommunoteWeb.NoteLive.FormComponent}
       id={@note.id}
@@ -9,34 +7,48 @@
       action={@live_action}
       note={@note}
       current_user={assigns.current_user}
-      return_to={Routes.note_show_path(@socket, :show, @code, @note.slug)}
+      return_to={Routes.note_show_path(@socket, :show, @note.slug)}
     />
   </.modal>
 <% end %>
 
-<ul>
-
-  <li>
-    <strong>Title:</strong>
-    <%= @note.title %>
-  </li>
-
-  <li>
-    <strong>Description:</strong>
-    <%= @note.description %>
-  </li>
-
-  <li>
-    <strong>Small description:</strong>
-    <%= @note.small_description %>
-  </li>
-
-  <li>
-    <strong>Slug:</strong>
-    <%= @note.slug %>
-  </li>
-
-</ul>
-
-<span><%= live_patch "Edit", to: Routes.note_show_path(@socket, :edit, @code, @note.slug), class: "button" %></span> |
-<span><%= live_redirect "Back", to: Routes.note_index_path(@socket, :index, @code) %></span>
+<div class="grid grid-cols-1 md:grid-cols-4 dark:text-white">
+  <div class="md:col-start-2 md:col-span-2 p-8 bg-white dark:bg-gray-800 rounded-lg">
+    <section class="mb-8">
+      <h1 class="text-2xl font-semibold lg:text-4xl dark:text-white text-center mb-4 underline underline-offset-8 decoration-4 decoration-purple-800 dark:decoration-green-600"><%= @note.title %></h1>
+    
+      <div class="flex justify-center font-medium gap-x-2 text-white text-sm">
+        <span class="py-1 px-2 bg-gradient-to-r from-green-500 to-green-600 rounded-full shadow hover:shadow-lg transform hover:scale-105 transition duration-300">
+          <i class="fas fa-user invisible sm:visible"></i>
+          <%= @note.user.first_name %> <%= @note.user.last_name %>
+        </span>
+    
+        <%= live_redirect to: Routes.note_index_path(@socket, :index, @note.course.code), class: "py-1 px-2 bg-gradient-to-r from-blue-500 to-blue-600 rounded-full shadow hover:shadow-lg transform hover:scale-105 transition duration-300" do %>
+          <i class="fas fa-book invisible sm:visible"></i>
+          <span><%= @note.course.code %></span>
+        <% end %>
+    
+        <span class="py-1 px-2 bg-gradient-to-r from-purple-500 to-purple-600 rounded-full shadow hover:shadow-lg transform hover:scale-105 transition duration-300">
+          <i class="fas fa-calendar invisible sm:visible"></i>
+          <%= @note.year.year %>
+        </span>
+      </div>
+    </section>
+    
+    <section class="mb-8">
+      <p class="text-justify">
+        <%= @note.description %>
+      </p>
+      <div class="flex justify-center w-full gap-x-2">
+        <%= live_patch to: Routes.note_show_path(@socket, :edit, @note.slug), class: "flex items-center px-2 py-2 font-medium tracking-wide text-white capitalize transition-colors duration-200 transform bg-yellow-600 rounded-md hover:bg-yellow-500 focus:outline-none focus:ring focus:ring-yellow-300 focus:ring-opacity-80" do %>
+          <i class="fas fa-pen"></i>
+          <span class="mx-1">Edit</span>
+        <% end %>
+        <%= link to: Routes.note_index_path(@socket, :index, @note.course.code), phx_click: "delete", phx_value_slug: @note.slug, data: [confirm: "Are you sure?"], class: "flex items-center px-2 py-2 font-medium tracking-wide text-white capitalize transition-colors duration-200 transform bg-red-600 rounded-md hover:bg-red-500 focus:outline-none focus:ring focus:ring-red-300 focus:ring-opacity-80" do %>
+          <i class="fas fa-trash"></i>
+          <span class="mx-1">Delete</span>
+        <% end %>
+      </div>
+    </section>
+  </div>
+</div>
