--- a/lib/communote_web/templates/layout/root.html.heex
+++ b/lib/communote_web/templates/layout/root.html.heex
@@ -8,24 +8,16 @@
     <%= live_title_tag assigns[:page_title] || "Communote", suffix: " · Phoenix Framework" %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
+    <script src="https://kit.fontawesome.com/1ebc69f3a2.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
-      <section class="container">
-        <nav>
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-            <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
-            <% end %>
-          </ul>
-          <%= render "_user_menu.html", assigns %>
-        </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src={Routes.static_path(@conn, "/images/phoenix.png")} alt="Phoenix Framework Logo"/>
-        </a>
-      </section>
+      <%= render "_user_menu.html", assigns %>
     </header>
-    <%= @inner_content %>
+    <div class="bg-gray-200 dark:bg-gray-900 dark:text-white pt-10 min-h-screen">
+      <div class="container mx-auto">
+        <%= @inner_content %>
+      </div>
+    </div>
   </body>
 </html>
