--- a/lib/communote_web/templates/user_confirmation/edit.html.heex
+++ b/lib/communote_web/templates/user_confirmation/edit.html.heex
@@ -1,12 +1,20 @@
-<h1>Confirm account</h1>
+<div class="w-full max-w-sm mx-auto overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800">
+  <div class="px-6 py-4">
+      <h2 class="text-3xl font-bold text-center text-gray-700 dark:text-white">Communoté</h2>
 
-<.form let={_f} for={:user} action={Routes.user_confirmation_path(@conn, :update, @token)}>
-  <div>
-    <%= submit "Confirm my account" %>
+      <p class="mt-1 text-center text-gray-500 dark:text-gray-400">Confirm account</p>
+
+      <.form let={_f} for={:user} action={Routes.user_confirmation_path(@conn, :update, @token)}>
+        <div class="w-full tracking-wide mt-4">
+            <%= submit "Confirm my account", class: "w-full px-4 py-2 leading-5 text-white transition-colors duration-200 transform bg-gray-700 rounded hover:bg-gray-600 focus:outline-none" %>
+        </div>
+      </.form>
   </div>
-</.form>
 
-<p>
-  <%= link "Register", to: Routes.user_registration_path(@conn, :new) %> |
-  <%= link "Log in", to: Routes.user_session_path(@conn, :new) %>
-</p>
+  <div class="flex items-center justify-center py-4 text-center bg-gray-50 dark:bg-gray-700">
+      <span class="text-sm text-gray-600 dark:text-gray-200">You can also</span>
+      <%= link "Register", to: Routes.user_registration_path(@conn, :new), class: "mx-2 text-sm font-bold text-blue-500 dark:text-blue-400 hover:underline" %>
+      <span class="text-sm text-gray-600 dark:text-gray-200">or</span>
+      <%= link "Log in", to: Routes.user_session_path(@conn, :new), class: "mx-2 text-sm font-bold text-blue-500 dark:text-blue-400 hover:underline" %>
+  </div>
+</div>
