--- a/lib/communote_web/templates/user_confirmation/new.html.heex
+++ b/lib/communote_web/templates/user_confirmation/new.html.heex
@@ -1,15 +1,26 @@
-<h1>Resend confirmation instructions</h1>
+<div class="w-full max-w-sm mx-auto overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800">
+  <div class="px-6 py-4">
+      <h2 class="text-3xl font-bold text-center text-gray-700 dark:text-white">Communoté</h2>
 
-<.form let={f} for={:user} action={Routes.user_confirmation_path(@conn, :create)}>
-  <%= label f, :email %>
-  <%= email_input f, :email, required: true %>
+      <p class="mt-1 text-center text-gray-500 dark:text-gray-400">Resend confirmation instructions</p>
 
-  <div>
-    <%= submit "Resend confirmation instructions" %>
+      <.form let={f} for={:user} action={Routes.user_confirmation_path(@conn, :create)}>
+
+        <div class="w-full mt-4">
+          <%= label f, :email, class: "text-gray-700 dark:text-gray-200" %>
+          <%= email_input f, :email, required: true, class: "block w-full px-4 py-2 mt-2 dark:text-gray-400 text-gray-700 placeholder-gray-500 bg-white border rounded-md dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 focus:border-blue-400 dark:focus:border-blue-300 focus:ring-opacity-40 focus:outline-none focus:ring focus:ring-blue-300" %>
+        </div>
+
+        <div class="w-full tracking-wide mt-4">
+            <%= submit "Resend confirmation instructions", class: "w-full px-4 py-2 leading-5 text-white transition-colors duration-200 transform bg-gray-700 rounded hover:bg-gray-600 focus:outline-none" %>
+        </div>
+      </.form>
   </div>
-</.form>
 
-<p>
-  <%= link "Register", to: Routes.user_registration_path(@conn, :new) %> |
-  <%= link "Log in", to: Routes.user_session_path(@conn, :new) %>
-</p>
+  <div class="flex items-center justify-center py-4 text-center bg-gray-50 dark:bg-gray-700">
+      <span class="text-sm text-gray-600 dark:text-gray-200">You can also</span>
+      <%= link "Register", to: Routes.user_registration_path(@conn, :new), class: "mx-2 text-sm font-bold text-blue-500 dark:text-blue-400 hover:underline" %>
+      <span class="text-sm text-gray-600 dark:text-gray-200">or</span>
+      <%= link "Log in", to: Routes.user_session_path(@conn, :new), class: "mx-2 text-sm font-bold text-blue-500 dark:text-blue-400 hover:underline" %>
+  </div>
+</div>
