--- a/lib/communote_web/templates/user_registration/new.html.heex
+++ b/lib/communote_web/templates/user_registration/new.html.heex
@@ -1,34 +1,51 @@
-<h1>Register</h1>
+<div class="w-full max-w-sm mx-auto overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800">
+  <div class="px-6 py-4">
+      <h2 class="text-3xl font-bold text-center text-gray-700 dark:text-white">Communoté</h2>
 
-<.form let={f} for={@changeset} action={Routes.user_registration_path(@conn, :create)}>
-  <%= if @changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
-    </div>
-  <% end %>
+      <p class="mt-1 text-center text-gray-500 dark:text-gray-400">Create an account</p>
 
-  <%= label f, :first_name %>
-  <%= text_input f, :first_name, required: true %>
-  <%= error_tag f, :first_name %>
+      <.form let={f} for={@changeset} action={Routes.user_registration_path(@conn, :create)}>
+        <div class="w-full mt-4">
+          <%= label f, :email, class: "text-gray-700 dark:text-gray-200" %>
+          <%= email_input f, :email, required: true, class: "block w-full px-4 py-2 mt-2 dark:text-gray-400 text-gray-700 placeholder-gray-500 bg-white border rounded-md dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 focus:border-blue-400 dark:focus:border-blue-300 focus:ring-opacity-40 focus:outline-none focus:ring focus:ring-blue-300" %>
+          <p class="text-red-400/100">
+            <%= error_tag f, :email %>
+          </p> 
+        </div>
 
-  <%= label f, :last_name %>
-  <%= text_input f, :last_name, required: true %>
-  <%= error_tag f, :last_name %>
+        <div class="w-full mt-4">
+          <%= label f, :password, class: "text-gray-700 dark:text-gray-200" %>
+          <%= password_input f, :password, required: true, class: "block w-full px-4 py-2 mt-2 dark:text-gray-400 text-gray-700 placeholder-gray-500 bg-white border rounded-md dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 focus:border-blue-400 dark:focus:border-blue-300 focus:ring-opacity-40 focus:outline-none focus:ring focus:ring-blue-300" %>
+          <p class="text-red-400/100">
+            <%= error_tag f, :password %>
+          </p>
+        </div>
 
-  <%= label f, :email %>
-  <%= email_input f, :email, required: true %>
-  <%= error_tag f, :email %>
+        <div class="w-full mt-4">
+          <%= label f, :first_name, class: "text-gray-700 dark:text-gray-200" %>
+          <%= text_input f, :first_name, required: true, class: "block w-full px-4 py-2 mt-2 dark:text-gray-400 text-gray-700 placeholder-gray-500 bg-white border rounded-md dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 focus:border-blue-400 dark:focus:border-blue-300 focus:ring-opacity-40 focus:outline-none focus:ring focus:ring-blue-300" %>
+          <p class="text-red-400/100">
+            <%= error_tag f, :first_name %>
+          </p>
+        </div>
 
-  <%= label f, :password %>
-  <%= password_input f, :password, required: true %>
-  <%= error_tag f, :password %>
+        <div class="w-full mt-4">
+          <%= label f, :last_name, class: "text-gray-700 dark:text-gray-200" %>
+          <%= text_input f, :last_name, required: true, class: "block w-full px-4 py-2 mt-2 dark:text-gray-400 text-gray-700 placeholder-gray-500 bg-white border rounded-md dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 focus:border-blue-400 dark:focus:border-blue-300 focus:ring-opacity-40 focus:outline-none focus:ring focus:ring-blue-300" %>
+          <p class="text-red-400/100">
+            <%= error_tag f, :last_name %>
+          </p>
+        </div>
 
-  <div>
-    <%= submit "Register" %>
+        <div class="w-full tracking-wide mt-4">
+            <%= submit "Register", class: "w-full px-4 py-2 leading-5 text-white transition-colors duration-200 transform bg-gray-700 rounded hover:bg-gray-600 focus:outline-none" %>
+        </div>
+      </.form>
   </div>
-</.form>
 
-<p>
-  <%= link "Log in", to: Routes.user_session_path(@conn, :new) %> |
-  <%= link "Forgot your password?", to: Routes.user_reset_password_path(@conn, :new) %>
-</p>
+  <div class="flex items-center justify-center py-4 text-center bg-gray-50 dark:bg-gray-700">
+      <span class="text-sm text-gray-600 dark:text-gray-200">Have an account? </span>
+      <%= link "Log in", to: Routes.user_session_path(@conn, :new), class: "mx-2 text-sm font-bold text-blue-500 dark:text-blue-400 hover:underline" %>
+  </div>
+</div>
+
