--- a/lib/communote_web/templates/user_settings/edit.html.heex
+++ b/lib/communote_web/templates/user_settings/edit.html.heex
@@ -1,20 +1,4 @@
-<div class="flex justify-center border-b border-gray-200 dark:border-gray-700">
-  <button class="flex items-center h-10 px-2 py-2 -mb-px text-center text-gray-700 bg-transparent border-b-2 border-transparent sm:px-4 -px-1 dark:text-white whitespace-nowrap cursor-base focus:outline-none hover:border-gray-400">
-    <i class="fas fa-user"></i>
-
-    <span class="mx-1 text-sm sm:text-base">
-      My Profile
-    </span>
-  </button>
-
-  <button class="flex items-center h-10 px-2 py-2 -mb-px text-center text-blue-600 bg-transparent border-b-2 border-blue-500 sm:px-4 -px-1 dark:border-blue-400 dark:text-blue-300 whitespace-nowrap focus:outline-none">
-    <i class="fas fa-gear"></i>
-
-    <span class="mx-1 text-sm sm:text-base">
-      Settings
-    </span>
-  </button>
-</div>
+<h1 class="text-center text-4xl font-bold underline underline-offset-8 decoration-4 decoration-purple-800 dark:decoration-green-600">Edit settings</h1>
 
 <section class="max-w-4xl p-6 mx-auto bg-white rounded-md shadow-md dark:bg-gray-800 mt-10">
   <h2 class="text-lg font-semibold text-gray-700 capitalize dark:text-white">Change email</h2>
