Added links to users' profiles

--- a/lib/communote_web/templates/layout/_user_menu.html.heex
+++ b/lib/communote_web/templates/layout/_user_menu.html.heex
@@ -46,18 +46,18 @@
 
                         <!-- Dropdown menu -->
                         <div class="invisible absolute right-0 z-20 w-56 py-2 mt-2 overflow-hidden bg-white rounded-md shadow-xl dark:bg-gray-800" id="dropdown" >
-                            <a href="#" class="flex items-center p-3 -mt-2 text-sm text-gray-600 transition-colors duration-200 transform dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 dark:hover:text-white">
-                              <div class="flex-shrink-0 object-cover mx-1 rounded-full w-9 h-9 bg-purple-300 dark:bg-green-600 flex items-center justify-center">
-                                <span class="text-center font-bold">
-                                  <%= String.first(@current_user.first_name) |> String.capitalize %><%= String.first(@current_user.last_name) |> String.capitalize %>
-                                </span>
-                              </div>
+                          <%= live_redirect to: Routes.profile_show_path(@conn, :show, @current_user.slug), class: "flex items-center p-3 -mt-2 text-sm text-gray-600 transition-colors duration-200 transform dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 dark:hover:text-white" do %>
+                            <div class="flex-shrink-0 object-cover mx-1 rounded-full w-9 h-9 bg-purple-300 dark:bg-green-600 flex items-center justify-center">
+                              <span class="text-center font-bold">
+                                <%= String.first(@current_user.first_name) |> String.capitalize %><%= String.first(@current_user.last_name) |> String.capitalize %>
+                              </span>
+                            </div>
 
-                              <div class="mx-1">
-                                <h1 class="text-sm font-semibold text-gray-700 dark:text-gray-200"><%= @current_user.first_name %> <%= @current_user.last_name %></h1>
-                                <p class="text-sm text-gray-500 dark:text-gray-400"><%= @current_user.email %></p>
-                              </div>
-                            </a>
+                            <div class="mx-1">
+                              <h1 class="text-sm font-semibold text-gray-700 dark:text-gray-200"><%= @current_user.first_name %> <%= @current_user.last_name %></h1>
+                              <p class="text-sm text-gray-500 dark:text-gray-400"><%= @current_user.email %></p>
+                            </div>
+                          <% end %>
 
                             <hr class="border-gray-200 dark:border-gray-700 ">
 
@@ -71,7 +71,7 @@
 
                             <hr class="border-gray-200 dark:border-gray-700 ">
                             
-                            <a href="#" class="flex items-center p-3 text-sm text-gray-600 capitalize transition-colors duration-200 transform dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 dark:hover:text-white">
+                            <%= live_redirect to: Routes.profile_show_path(@conn, :show, @current_user.slug), class: "flex items-center p-3 text-sm text-gray-600 capitalize transition-colors duration-200 transform dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 dark:hover:text-white" do %>
                                 <svg class="w-5 h-5 mx-1" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M7 8C7 5.23858 9.23858 3 12 3C14.7614 3 17 5.23858 17 8C17 10.7614 14.7614 13 12 13C9.23858 13 7 10.7614 7 8ZM12 11C13.6569 11 15 9.65685 15 8C15 6.34315 13.6569 5 12 5C10.3431 5 9 6.34315 9 8C9 9.65685 10.3431 11 12 11Z" fill="currentColor"></path>
                                     <path d="M6.34315 16.3431C4.84285 17.8434 4 19.8783 4 22H6C6 20.4087 6.63214 18.8826 7.75736 17.7574C8.88258 16.6321 10.4087 16 12 16C13.5913 16 15.1174 16.6321 16.2426 17.7574C17.3679 18.8826 18 20.4087 18 22H20C20 19.8783 19.1571 17.8434 17.6569 16.3431C16.1566 14.8429 14.1217 14 12 14C9.87827 14 7.84344 14.8429 6.34315 16.3431Z" fill="currentColor"></path>
@@ -80,7 +80,7 @@
                                 <span class="mx-1">
                                     View profile
                                 </span>
-                            </a>
+                            <% end %>
                             
                             <%= link to: Routes.user_settings_path(@conn, :edit), class: "flex items-center p-3 text-sm text-gray-600 capitalize transition-colors duration-200 transform dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 dark:hover:text-white" do %>
                                 <svg class="w-5 h-5 mx-1" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
