--- a/lib/communote_web/live/course_live/index.html.heex
+++ b/lib/communote_web/live/course_live/index.html.heex
@@ -1,4 +1,4 @@
-<h1 class="text-center text-4xl font-bold underline underline-offset-8 decoration-4 decoration-purple-800 dark:decoration-green-600">Search for courses</h1>
+<h1 class="text-center text-4xl font-bold underline underline-offset-8 decoration-4 decoration-purple-800 dark:decoration-green-600 dark:text-white">Search for courses</h1>
 
 <.form let={f} for={@changeset} phx-change="changed" phx_submit="changed">
   <div class="relative mt-6 lg:w-7/12 lg:mx-auto">
