--- a/lib/communote_web/templates/layout/root.html.heex
+++ b/lib/communote_web/templates/layout/root.html.heex
@@ -14,10 +14,8 @@
     <header>
       <%= render "_user_menu.html", assigns %>
     </header>
-    <div class="bg-gray-200 dark:bg-gray-900 dark:text-white pt-10 min-h-screen">
-      <div class="container mx-auto">
-        <%= @inner_content %>
-      </div>
+    <div class="bg-gray-200 dark:bg-gray-900 min-h-screen">
+      <%= @inner_content %>
     </div>
   </body>
 </html>
