--- a/lib/communote_web/templates/user_settings/edit.html.heex
+++ b/lib/communote_web/templates/user_settings/edit.html.heex
@@ -1,6 +1,6 @@
-<h1 class="text-center text-4xl font-bold underline underline-offset-8 decoration-4 decoration-purple-800 dark:decoration-green-600">Edit settings</h1>
+<h1 class="text-center text-4xl font-bold underline underline-offset-8 decoration-4 decoration-purple-800 dark:decoration-green-600 dark:text-white">Edit settings</h1>
 
-<section class="max-w-4xl p-6 mx-auto bg-white rounded-md shadow-md dark:bg-gray-800 mt-10">
+<section class="max-w-4xl p-6 mx-auto bg-white rounded-md shadow-md dark:bg-gray-800 mt-10 dark:text-white">
   <h2 class="text-lg font-semibold text-gray-700 capitalize dark:text-white">Change email</h2>
 
   <%= if @email_changeset.action do %>
