--- a/lib/communote_web/templates/user_session/new.html.heex
+++ b/lib/communote_web/templates/user_session/new.html.heex
@@ -47,11 +47,7 @@
     <%= link to: "/auth/google", class: "text-xs text-gray-600 dark:text-gray-200 hover:underline flex items-center justify-center w-full px-6 py-2 mx-2 text-sm font-medium text-white transition-colors duration-200 transform bg-blue-500 rounded-md hover:bg-blue-400 focus:bg-blue-400 focus:outline-none" do %>
         <i class="fa-brands fa-google"></i>
 
-        <span class="hidden mx-2 sm:inline">Sign in with Google</span>
-    <% end %>
-
-    <%= link to: "/auth/microsoft", class: "p-2 mx-2 text-sm font-medium text-gray-500 transition-colors duration-200 transform bg-gray-300 rounded-md hover:bg-gray-200" do %>
-        <i class="fa-brands fa-microsoft"></i>
+        <span class="hidden mx-2 sm:inline">Log in with Google</span>
     <% end %>
   </div>
 
