--- a/lib/communote_web/live/note_live/show.html.heex
+++ b/lib/communote_web/live/note_live/show.html.heex
@@ -40,13 +40,16 @@
         <%= @note.description %>
       </p>
       <div class="flex justify-center w-full gap-x-2">
-        <%= live_patch to: Routes.note_show_path(@socket, :edit, @note.slug), class: "flex items-center px-2 py-2 font-medium tracking-wide text-white capitalize transition-colors duration-200 transform bg-yellow-600 rounded-md hover:bg-yellow-500 focus:outline-none focus:ring focus:ring-yellow-300 focus:ring-opacity-80" do %>
-          <i class="fas fa-pen"></i>
-          <span class="mx-1">Edit</span>
-        <% end %>
-        <%= link to: Routes.note_index_path(@socket, :index, @note.course.code), phx_click: "delete", phx_value_slug: @note.slug, data: [confirm: "Are you sure?"], class: "flex items-center px-2 py-2 font-medium tracking-wide text-white capitalize transition-colors duration-200 transform bg-red-600 rounded-md hover:bg-red-500 focus:outline-none focus:ring focus:ring-red-300 focus:ring-opacity-80" do %>
-          <i class="fas fa-trash"></i>
-          <span class="mx-1">Delete</span>
+        <%= if assigns.current_user.id == @note.user_id do %>
+          <%= live_patch to: Routes.note_show_path(@socket, :edit, @note.slug), class: "flex items-center px-2 py-2 font-medium tracking-wide text-white capitalize transition-colors duration-200 transform bg-yellow-600 rounded-md hover:bg-yellow-500 focus:outline-none focus:ring focus:ring-yellow-300 focus:ring-opacity-80" do %>
+            <i class="fas fa-pen"></i>
+            <span class="mx-1">Edit</span>
+          <% end %>
+
+          <%= link to: Routes.note_index_path(@socket, :index, @note.course.code), phx_click: "delete", phx_value_slug: @note.slug, data: [confirm: "Are you sure?"], class: "flex items-center px-2 py-2 font-medium tracking-wide text-white capitalize transition-colors duration-200 transform bg-red-600 rounded-md hover:bg-red-500 focus:outline-none focus:ring focus:ring-red-300 focus:ring-opacity-80" do %>
+            <i class="fas fa-trash"></i>
+            <span class="mx-1">Delete</span>
+          <% end %>
         <% end %>
       </div>
     </section>
