--- a/lib/communote_web/live/note_live/show.html.heex
+++ b/lib/communote_web/live/note_live/show.html.heex
@@ -40,6 +40,11 @@
         <%= @note.description %>
       </p>
       <div class="flex justify-center w-full gap-x-2">
+        <%= live_redirect to: Routes.note_path(@socket, :download, @note.slug), class: "flex items-center px-2 py-2 font-medium tracking-wide text-white capitalize transition-colors duration-200 transform bg-green-600 rounded-md hover:bg-green-500 focus:outline-none focus:ring focus:ring-green-300 focus:ring-opacity-80" do %>
+          <i class="fas fa-download"></i>
+          <span class="mx-1">Download</span>
+        <% end %>
+
         <%= if assigns.current_user.id == @note.user_id do %>
           <%= live_patch to: Routes.note_show_path(@socket, :edit, @note.slug), class: "flex items-center px-2 py-2 font-medium tracking-wide text-white capitalize transition-colors duration-200 transform bg-yellow-600 rounded-md hover:bg-yellow-500 focus:outline-none focus:ring focus:ring-yellow-300 focus:ring-opacity-80" do %>
             <i class="fas fa-pen"></i>
@@ -52,6 +57,14 @@
           <% end %>
         <% end %>
       </div>
+    </section>
+
+    <section class="invisible md:visible h-screen">
+      <embed
+        class="h-5/6 w-full"
+        src={@presigned_url}
+        type="application/pdf"
+      />
     </section>
   </div>
 </div>
