--- a/lib/communote_web/live/note_live/show.html.heex
+++ b/lib/communote_web/live/note_live/show.html.heex
@@ -12,12 +12,27 @@
   </.modal>
 <% end %>
 
-<div class="grid grid-cols-1 md:grid-cols-4 dark:text-white">
-  <div class="md:col-start-2 md:col-span-2 p-8 bg-white dark:bg-gray-800 rounded-lg">
+<%= if @live_action in [:new_report] do %>
+  <.modal return_to={Routes.note_show_path(@socket, :show, @note.slug)}>
+    <.live_component
+      module={CommunoteWeb.ReportLive.FormComponent}
+      id={:new_report}
+      title={@page_title}
+      action={@live_action}
+      report={@report}
+      note={@note}
+      current_user={assigns.current_user}
+      return_to={Routes.note_show_path(@socket, :show, @note.slug)}
+    />
+  </.modal>
+<% end %>
+
+<div class="grid grid-cols-1 lg:grid-cols-4 dark:text-white">
+  <div class="col-span-1 lg:col-start-2 lg:col-span-2 p-8 bg-white dark:bg-gray-800 rounded-lg">
     <section class="mb-8">
       <h1 class="text-2xl font-semibold lg:text-4xl dark:text-white text-center mb-4 underline underline-offset-8 decoration-4 decoration-purple-800 dark:decoration-green-600"><%= @note.title %></h1>
     
-      <div class="flex justify-center font-medium gap-x-2 text-white text-sm">
+      <div class="flex flex flex-col md:flex-row justify-center font-medium gap-x-2 text-white text-sm">
         <%= live_redirect to: Routes.profile_show_path(@socket, :show, @note.user.slug), class: "py-1 px-2 bg-gradient-to-r from-green-500 to-green-600 rounded-full shadow hover:shadow-lg transform hover:scale-105 transition duration-300" do %>
           <i class="fas fa-user invisible sm:visible"></i>
           <%= @note.user.first_name %> <%= @note.user.last_name %>
@@ -36,13 +51,18 @@
     </section>
     
     <section class="mb-8">
-      <p class="text-justify">
+      <p class="text-justify mb-4 md:px-12">
         <%= @note.description %>
       </p>
-      <div class="flex justify-center w-full gap-x-2">
+      <div class="flex flex-col md:flex-row justify-center w-full gap-x-2">
         <%= live_redirect to: Routes.note_path(@socket, :download, @note.slug), class: "flex items-center px-2 py-2 font-medium tracking-wide text-white capitalize transition-colors duration-200 transform bg-green-600 rounded-md hover:bg-green-500 focus:outline-none focus:ring focus:ring-green-300 focus:ring-opacity-80" do %>
           <i class="fas fa-download"></i>
           <span class="mx-1">Download</span>
+        <% end %>
+
+        <%= live_patch to: Routes.note_show_path(@socket, :new_report, @note.slug), class: "flex items-center px-2 py-2 font-medium tracking-wide text-white capitalize transition-colors duration-200 transform bg-red-600 rounded-md hover:bg-red-500 focus:outline-none focus:ring focus:ring-red-300 focus:ring-opacity-80" do %>
+          <i class="fas fa-warning"></i>
+          <span class="mx-1">Report</span>
         <% end %>
 
         <%= if assigns.current_user.id == @note.user_id do %>
@@ -59,12 +79,14 @@
       </div>
     </section>
 
-    <section class="invisible md:visible h-screen">
-      <embed
-        class="h-5/6 w-full"
-        src={@presigned_url}
-        type="application/pdf"
-      />
-    </section>
+    <%= if @live_action in [:show] do %>
+      <section class="invisible md:visible h-screen">
+        <embed
+          class="h-5/6 w-full"
+          src={@presigned_url}
+          type="application/pdf"
+        />
+      </section>
+    <% end %>
   </div>
 </div>
