Changed the text color for dark theme on the user profile page

--- a/lib/communote_web/live/profile_live/show.html.heex
+++ b/lib/communote_web/live/profile_live/show.html.heex
@@ -13,5 +13,5 @@
     <% end %>
   </ul>
 <% else %>
-  <h2 class="text-center text-3xl mt-32 w-full">It looks empty in here...</h2>
+  <h2 class="text-center text-3xl mt-32 w-full dark:text-white">It looks empty in here...</h2>
 <% end %>
