Fixed navbar dropdown not working for non-live pages

--- a/lib/communote_web/templates/layout/_user_menu.html.heex
+++ b/lib/communote_web/templates/layout/_user_menu.html.heex
@@ -34,10 +34,7 @@
                     <%= live_redirect "Create a note", to: Routes.note_new_path(@conn, :new), class: "block w-1/2 px-3 py-2 text-sm font-medium leading-5 text-center text-white transition-colors duration-200 transform bg-purple-800 dark:bg-green-600 rounded-md hover:bg-purple-900 dark:hover:bg-green-700 md:mx-0 md:w-auto" %>
                     <div class="relative inline-block">
                         <!-- Dropdown toggle button -->
-                        <button class="relative z-10 flex items-center p-2 text-sm text-gray-600 bg-white border border-transparent rounded-md focus:border-blue-500 focus:ring-opacity-40 dark:focus:ring-opacity-40 focus:ring-blue-300 dark:focus:ring-blue-400 focus:ring dark:text-white dark:bg-gray-800 focus:outline-none"
-                          phx-click={Phoenix.LiveView.JS.remove_class("invisible", to: "#dropdown")}
-                          phx-click-away={Phoenix.LiveView.JS.add_class("invisible", to: "#dropdown")}
-                        >
+                        <button id="dropdown-button" class="relative z-10 flex items-center p-2 text-sm text-gray-600 bg-white border border-transparent rounded-md focus:border-blue-500 focus:ring-opacity-40 dark:focus:ring-opacity-40 focus:ring-blue-300 dark:focus:ring-blue-400 focus:ring dark:text-white dark:bg-gray-800 focus:outline-none">
                           <span class="mx-1"><%= @current_user.first_name %> <%= @current_user.last_name %></span>
                           <svg class="w-5 h-5 mx-1" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M12 15.713L18.01 9.70299L16.597 8.28799L12 12.888L7.40399 8.28799L5.98999 9.70199L12 15.713Z" fill="currentColor"></path>
